Mobile header: increase logo/title; standardize header height and icon sizes; make controls consistent up to 820px

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Madhu Homemade Masala - Premium handcrafted spices, masalas, and dry fruits. Pure, authentic, made with love.">
   <meta name="keywords" content="homemade masala, Indian spices, garam masala, dry fruits, organic spices">
@@ -11,33 +10,32 @@
   <script defer src="assets/js/main.js"></script>
 </head>
 <body>
-  <!-- Navbar -->
-  <header class="site-header" id="navbar">
-    <nav class="navbar container">
-      <div class="logo" style="background:#040f1a;display:flex;align-items:center;justify-content:center;padding:0.3rem 1rem;border-radius:16px;">
-        <img src="assets/images/logomhm.png" alt="Madhu Homemade Masala Logo" class="navbar-logo" />
-        <span class="site-title">MADHU HOMEMADE MASALA</span>
-      </div>
-      <ul class="nav-links" id="nav-links">
-        <li><a href="#shop">Shop</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-      <div class="nav-actions">
-        <button class="cart-btn" id="cart-btn" aria-label="View Cart">
-          🛒 <span class="cart-count" id="cart-count">0</span>
-        </button>
-        <button class="hamburger" id="hamburger-btn" aria-label="Menu">
-          <span></span>
-          <span></span>
-          <span></span>
-        </button>
-      </div>
-    </nav>
-  </header>
+  <!-- Mobile Hero Header (logo, title, cart, hamburger) -->
+  <div class="mobile-hero-header">
+    <div class="mobile-hero-row">
+      <img src="assets/images/logomhm.png" alt="Madhu Homemade Masala Logo" class="navbar-logo" />
+      <span class="site-title">MADHU HOMEMADE MASALA</span>
+      <button class="cart-btn" id="cart-btn" aria-label="View Cart">
+        🛒 <span class="cart-count" id="cart-count">0</span>
+      </button>
+      <button class="hamburger" id="hamburger-btn" aria-label="Menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+    </div>
+  </div>
 
   <!-- Mobile Menu Overlay -->
   <div class="mobile-menu" id="mobile-menu">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="description" content="Madhu Homemade Masala - Premium handcrafted spices, masalas, and dry fruits. Pure, authentic, made with love.">
+  <meta name="keywords" content="homemade masala, Indian spices, garam masala, dry fruits, organic spices">
+  <title>Madhu Homemade Masala | Premium Handcrafted Spices & Masalas</title>
+  <link rel="stylesheet" href="assets/css/main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600;700&family=Playfair+Display:wght@500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+  <script defer src="assets/js/main.js"></script>
     <button class="close-menu" id="close-menu">&times;</button>
     <ul class="mobile-nav-links">
       <li><a href="#home">Home</a></li>
