Mobile: tighten header spacing, enlarge logo, shrink title; allow section-title wrap; remove payment methods; shrink contact send button

--- a/index.html
+++ b/index.html
@@ -28,14 +28,6 @@
 
   <!-- Mobile Menu Overlay -->
   <div class="mobile-menu" id="mobile-menu">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <meta name="description" content="Madhu Homemade Masala - Premium handcrafted spices, masalas, and dry fruits. Pure, authentic, made with love.">
-  <meta name="keywords" content="homemade masala, Indian spices, garam masala, dry fruits, organic spices">
-  <title>Madhu Homemade Masala | Premium Handcrafted Spices & Masalas</title>
-  <link rel="stylesheet" href="assets/css/main.css">
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600;700&family=Playfair+Display:wght@500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-  <script defer src="assets/js/main.js"></script>
     <button class="close-menu" id="close-menu">&times;</button>
     <ul class="mobile-nav-links">
       <li><a href="#home">Home</a></li>
@@ -47,14 +39,7 @@
     </ul>
   </div>
 
-  <!-- Mobile Bottom Cart Bar -->
-  <div class="mobile-cart-bar" id="mobile-cart-bar" style="display: none;">
-    <div class="cart-info">
-      <div class="cart-total-mobile">₹<span id="cart-total-mobile">0</span></div>
-      <small><span id="cart-count-mobile">0</span> items</small>
-    </div>
-    <button class="view-cart-btn" id="view-cart-mobile">🛒 View Cart</button>
-  </div>
+  <!-- Mobile Bottom Cart Bar removed to keep desktop clean -->
 
   <!-- Cart Sidebar -->
   <aside class="cart-sidebar" id="cart-sidebar">
@@ -198,7 +183,7 @@
               </svg>
               <div>
                 <h3>Location</h3>
-                <p>Kerala, India</p>
+                <p>Bangalore, Karnataka</p>
               </div>
             </div>
           </div>
@@ -284,30 +269,7 @@
             <li><a href="#">Terms & Conditions</a></li>
           </ul>
         </div>
-        <div class="footer-col">
-          <h3>Payment Methods</h3>
-          <div class="payment-icons">
-            <span>
-              <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <rect x="3" y="7" width="22" height="14" rx="3" fill="#f4e5b8" stroke="#d4af37" stroke-width="2"/>
-                <rect x="7" y="15" width="6" height="3" rx="1" fill="#d4af37"/>
-              </svg>
-            </span>
-            <span>
-              <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <ellipse cx="14" cy="14" rx="10" ry="7" fill="#f4e5b8" stroke="#d4af37" stroke-width="2"/>
-                <rect x="10" y="10" width="8" height="8" rx="2" fill="#d4af37"/>
-              </svg>
-            </span>
-            <span>
-              <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <rect x="7" y="5" width="14" height="18" rx="4" fill="#f4e5b8" stroke="#d4af37" stroke-width="2"/>
-                <circle cx="14" cy="20" r="2" fill="#d4af37"/>
-                <rect x="11" y="9" width="6" height="7" rx="1" fill="#d4af37"/>
-              </svg>
-            </span>
-          </div>
-        </div>
+        <!-- Payment Methods column removed per request -->
       </div>
       <div class="footer-bottom">
         <p>&copy; 2025 Madhu Homemade Masala. All Rights Reserved.</p>
